--- a/incubate/templates/.pre-commit-config.yaml.j2
+++ b/incubate/templates/.pre-commit-config.yaml.j2
@@ -2,6 +2,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
+{%- block hooks %}
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
@@ -29,3 +30,4 @@ repos:
     rev: v2.7.1
     hooks:
       - id: prettier
+{%- endblock hooks %}
