--- a/incubate/templates/pyproject.toml.j2
+++ b/incubate/templates/pyproject.toml.j2
@@ -78,7 +78,7 @@ line-length = 120
 
 [tool.ruff]
 line-length = 120
-select = [
+select = [{# TODO: add more #}
     "I001"  # isort
 ]
 {%- endblock %}
