--- a/incubate/templates/projects/FastAPI/app/__main__.py.j2
+++ b/incubate/templates/projects/FastAPI/app/__main__.py.j2
@@ -2,7 +2,10 @@ import uvicorn
 
 
 def main():
-    uvicorn.run("app.app:app")
+    uvicorn.run(
+        "app.app:app",
+        reload=True,
+    )
 
 
 if __name__ == "__main__":
