--- a/incubate/templates/projects/FastAPI/app/app.py.j2
+++ b/incubate/templates/projects/FastAPI/app/app.py.j2
@@ -25,15 +25,21 @@ app = FastAPI()
 @app.post("/token", response_model=Token)
 async def login_for_access_token(form_data: Annotated[OAuth2PasswordRequestForm, Depends()]):
     user = authenticate_user(fake_users_db, form_data.username, form_data.password)
-    if not user:
+    if user is None:
         raise HTTPException(
             status_code=status.HTTP_401_UNAUTHORIZED,
             detail="Incorrect username or password",
             headers={"WWW-Authenticate": "Bearer"},
         )
-    access_token_expires = timedelta(minutes=ACCESS_TOKEN_EXPIRE_MINUTES)
-    access_token = create_access_token(data={"sub": user.username}, expires_delta=access_token_expires)
-    return {"access_token": access_token, "token_type": "bearer"}
+    return {
+        "access_token": create_access_token(
+            data={"sub": user.username},
+            expires_delta=timedelta(
+                minutes=ACCESS_TOKEN_EXPIRE_MINUTES,
+            )
+        ),
+        "token_type": "bearer"
+    }
 
 
 @app.get("/users/me/", response_model=User)
