--- a/incubate/templates/projects/FastAPI/app/auth.py.j2
+++ b/incubate/templates/projects/FastAPI/app/auth.py.j2
@@ -29,7 +29,10 @@ oauth2_scheme = OAuth2PasswordBearer(tokenUrl="token")
 
 
 def verify_password(plain_password, hashed_password):
-    return pwd_context.verify(plain_password, hashed_password)
+    return pwd_context.verify(
+        plain_password,
+        hashed_password
+    )
 
 
 def get_password_hash(password):
@@ -38,8 +41,7 @@ def get_password_hash(password):
 
 def get_user(db, username: str):
     if username in db:
-        user_dict = db[username]
-        return UserInDB(**user_dict)
+        return UserInDB(**db[username])
 
 
 def authenticate_user(fake_db, username: str, password: str):
@@ -58,7 +60,10 @@ def create_access_token(data: dict, expires_delta: timedelta | None = None):
     else:
         expire = datetime.utcnow() + timedelta(minutes=15)
     to_encode.update({"exp": expire})
-    encoded_jwt = jwt.encode(to_encode, os.environ["SECRET_KEY"], algorithm=os.environ["ALGORITHM"])
+    encoded_jwt = jwt.encode(
+        to_encode, os.environ["SECRET_KEY"],
+        algorithms=os.environ["ALGORITHM"]
+    )
     return encoded_jwt
 
 
@@ -69,13 +74,20 @@ async def get_current_user(token: Annotated[str, Depends(oauth2_scheme)]):
         headers={"WWW-Authenticate": "Bearer"},
     )
     try:
-        payload = jwt.decode(token, os.environ["SECRET_KEY"], algorithm=os.environ["ALGORITHM"])
+        payload = jwt.decode(
+            token,
+            os.environ["SECRET_KEY"],
+            algorithm=os.environ["ALGORITHM"]
+        )
+
         username: str = payload.get("sub")
         if username is None:
             raise credentials_exception
+
         token_data = TokenData(username=username)
     except JWTError:
         raise credentials_exception
+
     user = get_user(fake_users_db, username=token_data.username)
     if user is None:
         raise credentials_exception
@@ -84,5 +96,8 @@ async def get_current_user(token: Annotated[str, Depends(oauth2_scheme)]):
 
 async def get_current_active_user(current_user: Annotated[User, Depends(get_current_user)]):
     if current_user.disabled:
-        raise HTTPException(status_code=400, detail="Inactive user")
+        raise HTTPException(
+            status_code=400,
+            detail="Inactive user"
+        )
     return current_user
