--- a/incubate/templates/CONTRIBUTING.j2
+++ b/incubate/templates/CONTRIBUTING.j2
@@ -1,13 +1,13 @@
-# {{ project }}
+# {¤ project ¤}
 
-{%- block tldr %}
-{% endblock %}
+{§- block tldr §}
+{§ endblock §}
 ## Setup development environment
 
 ### Linux
 
 ```bash
-python3 -m venv .venv --prompt {{ project }}
+python3 -m venv .venv --prompt {¤ project ¤}
 source .venv/bin/activate
 pip install -e .[dev]
 ```
@@ -15,7 +15,7 @@ pip install -e .[dev]
 ### Windows
 
 ```ps1
-py -3 -m venv .venv --prompt {{ project }}
+py -3 -m venv .venv --prompt {¤ project ¤}
 .venv\Scripts\activate
 pip install -e .[dev]
 ```
