--- a/incubate/templates/README.md.j2
+++ b/incubate/templates/README.md.j2
@@ -1,4 +1,4 @@
-# {{ project }}
+# {¤ project ¤}
 
 This is a project template, please replace this text with a description of your project.
 I'm not an expert within python packaging so feel free to suggest improvements.
