--- a/incubate/templates/licenses/BSD-1-Clause.j2
+++ b/incubate/templates/licenses/BSD-1-Clause.j2
@@ -1,5 +1,5 @@
-Copyright (c) {{ year }}
-{{ author }}
+Copyright (c) {¤ year ¤}
+{¤ author ¤}
 All rights reserved.{# Optional #}
 
 Redistribution and use in source and binary forms, with or without modification,
