--- a/incubate/templates/projects/Default/pyproject.toml.j2
+++ b/incubate/templates/projects/Default/pyproject.toml.j2
@@ -1,6 +1,6 @@
-{% extends "pyproject.toml.j2" %}
+{§ extends "pyproject.toml.j2" §}
 
-{%- block build_system %}
-{{ super() }}
+{§- block build_system §}
+{¤ super() ¤}
 where = ["src"]
-{%- endblock %}
+{§- endblock §}
