--- a/incubate/templates/projects/FastAPI/CONTRIBUTING.j2
+++ b/incubate/templates/projects/FastAPI/CONTRIBUTING.j2
@@ -1,5 +1,5 @@
-{% extends "CONTRIBUTING.j2" %}
+{§ extends "CONTRIBUTING.j2" §}
 
-{% block tldr %}
+{§ block tldr §}
 Username: `johndoe` Password: `secret`
-{% endblock %}
+{§ endblock §}
