--- a/incubate/templates/licenses/Apache-2.0.j2
+++ b/incubate/templates/licenses/Apache-2.0.j2
@@ -1,4 +1,4 @@
-Copyright (c) {{ year }} {{ author }}
+Copyright (c) {¤ year ¤} {¤ author ¤}
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
