--- a/incubate/templates/licenses/BSD-2-Clause.j2
+++ b/incubate/templates/licenses/BSD-2-Clause.j2
@@ -1,4 +1,4 @@
-Copyright (c) {{ year }} {{ author }}
+Copyright (c) {¤ year ¤} {¤ author ¤}
 
 Redistribution and use in source and binary forms, with or without modification,
 are permitted provided that the following conditions are met:
