--- a/incubate/templates/licenses/MIT.j2
+++ b/incubate/templates/licenses/MIT.j2
@@ -1,4 +1,4 @@
-Copyright (c) {{ year }} {{ author }} and others
+Copyright (c) {¤ year ¤} {¤ author ¤} and others
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this
 software and associated documentation files (the "Software"), to deal in the Software
