--- a/incubate/templates/projects/FastAPI/app/auth.py.j2
+++ b/incubate/templates/projects/FastAPI/app/auth.py.j2
@@ -2,13 +2,13 @@ import os
 from datetime import datetime, timedelta
 from typing import Annotated
 
+from dotenv import load_dotenv
+from fastapi import Depends, HTTPException, status
 from fastapi.security import OAuth2PasswordBearer
 from jose import JWTError, jwt
 from passlib.context import CryptContext
-from fastapi import Depends, HTTPException, status
-from dotenv import load_dotenv
 
-from app.models import User, UserInDB, TokenData
+from app.models import TokenData, User, UserInDB
 
 load_dotenv()
 
